<resources>
    <string name="app_name">Wunder App</string>

    <string name="no_data">No data found</string>
    <string name="no_conn">No internet connection</string>

    <string name="label_name">name</string>
    <string name="label_vin">vin</string>
    <string name="label_engine">engine</string>
    <string name="label_fuel">fuel</string>
    <string name="label_exterior">exterior</string>
    <string name="label_interior">interior</string>
    <string name="label_address">address</string>
    <string name="label_coordinates">coordinates</string>

    <string name="car_name">HH-GO8522</string>
    <string name="car_vin">WME4513341K565439</string>
    <string name="car_engine">CE</string>
    <string name="car_fuel">42</string>
    <string name="car_exterior">UNACCEPTABLE</string>
    <string name="car_interior">UNACCEPTABLE</string>
    <string name="car_address">Lesserstraße 170, 22049 Hamburg</string>
    <string name="car_coordinates">10.07526, 53.59301, 0</string>

    <string name="menu_map">Map View</string>
    <string name="flip_view">Change View</string>
    <string name="map_type_none">NONE</string>
    <string name="map_type_normal">NORMAL</string>
    <string name="map_type_satellite">SATELLITE</string>
    <string name="map_type_hybrid">HYBRID</string>
    <string name="map_type_terrain">TERRAIN</string>
    <string name="info_window">This is an info window</string>
</resources>
